fix: horizontal scroll

--- a/src/views/home/home.module.scss
+++ b/src/views/home/home.module.scss
@@ -5,6 +5,7 @@
 .root {
   width: 100%;
   padding: func.rem(40) 0;
+  overflow: hidden;
 }
 
 .title {
